objects/vlocity_ins__AttributeAssignmentExport__c.object
<CustomObject>
    <description>Represents a user&apos;s request to export Vlocity Attribute Assignment data.</description>
    <fields>
        <fullName>vlocity_ins__AttributeCategory__c</fullName>
        <label>Attribute Category</label>
        <referenceTo>vlocity_ins__AttributeCategory__c</referenceTo>
        <relationshipLabel>Attribute Assignment Export</relationshipLabel>
        <relationshipName>AttributeAssignmentExport</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__IsProcessed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Processed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__ObjectType__c</fullName>
        <label>Object Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__SelectedAttributes__c</fullName>
        <label>Selected Attributes</label>
        <length>32678</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Export</fullName>
                </value>
                <value>
                    <fullName>Merge</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Attribute Assignment Export</label>
    <nameField>
        <label>Attribute Assignment Export Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Attribute Assignment Export</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>